# Aegis-Boot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md
src/barzakh-scanner-rs/crates/barzakh-adversary/: Cargo.toml
src/barzakh-scanner-rs/crates/barzakh-adversary/src/: corpus.rs  lib.rs
src/barzakh-scanner-rs/crates/barzakh-adversary/src/deploy/: esp_image.rs  mod.rs  qemu.rs
src/barzakh-scanner-rs/crates/barzakh-adversary/src/harness/: gap.rs  mod.rs  mutator.rs  runner.rs
src/barzakh-scanner-rs/crates/barzakh-adversary/src/payloads/: amfi_bypass.rs  android_avb_rollback.rs  android_bootconfig_inject.rs  android_bootctrl_poison.rs  android_bt_forge.rs  android_chain_break.rs  android_dice_forge.rs  android_dlkm_inject.rs  android_fastboot_unlock.rs  android_gki_tamper.rs  android_keymint_downgrade.rs  android_pkvm_escape.rs  android_rkp_spoof.rs  android_trusty_tamper.rs  android_vbmeta_tamper.rs  android_verity_disable.rs  apple_img4_downgrade.rs  arm_iboot.rs  arm_scm.rs  arm_trustzone.rs  asus_nvram_redirect.rs  auth_var_rollback.rs  blacklotus_mok.rs  boot_guard_bypass.rs  boot_guard_km_forge.rs  boot_services_hook.rs  bt_firmware_implant.rs  capsule_tamper.rs  clkscrew_voltage.rs  csme_update_tamper.rs  cxl_dma_attack.rs  dbx_rollback.rs  dell_bios_connect.rs  dmar_neuter.rs  dxe_depex_hijack.rs  fv_tamper.rs  idrac_spi_lateral.rs  insyde_smm_capsule.rs  ios_ane_inject.rs  ios_iboot_patch.rs  (+35 more)
src/barzakh-scanner-rs/crates/barzakh-adversary/tests/: integration.rs
(+292 files in other folders)
